Add default plugin configs